Refactor task-workers code/ add email verification
